@@ -1,3 +1,7 @@
+2024-07-05  Kevin Ushey  <kevinushey@gmail.com>
+
+	* inst/include/Rcpp/Environment.h: Drop support for UserDefinedDatabase.
+
 2024-06-22  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll micro version
